--- a/src/app/_popupKomponente/jahresabschluss/jahresabschluss.component.html
+++ b/src/app/_popupKomponente/jahresabschluss/jahresabschluss.component.html
@@ -19,132 +19,11 @@
                         </tr>
                     </thead>
                     <tbody>
-                        <tr>
-                            <td>2021/2022</td>
-                            <td>Jahresabschluss</td>
+                        <tr *ngFor="let abschluss of abschluesse">
+                            <td>{{abschluss.jahr}}</td>
+                            <td>{{abschluss.bezeichnung}}</td>
                             <td><a href="">Download</a></td>
                         </tr>
-                        <tr>
-                            <td>2021/2022</td>
-                            <td>Jahresabschluss</td>
-                            <td><a href="">Download</a></td>
-                        </tr>
-                        <tr>
-                            <td>2021/2022</td>
-                            <td>Jahresabschluss</td>
-                            <td><a href="">Download</a></td>
-                        </tr>
-                        <tr>
-                            <td>2021/2022</td>
-                            <td>Jahresabschluss</td>
-                            <td><a href="">Download</a></td>
-                        </tr>
-                        <tr>
-                            <td>2021/2022</td>
-                            <td>Jahresabschluss</td>
-                            <td><a href="">Download</a></td>
-                        </tr>
-                        <tr>
-                            <td>2021/2022</td>
-                            <td>Jahresabschluss</td>
-                            <td><a href="">Download</a></td>
-                        </tr>
-                        <tr>
-                            <td>2021/2022</td>
-                            <td>Jahresabschluss</td>
-                            <td><a href="">Download</a></td>
-                        </tr>
-                        <tr>
-                            <td>2021/2022</td>
-                            <td>Jahresabschluss</td>
-                            <td><a href="">Download</a></td>
-                        </tr>
-                        <tr>
-                            <td>2021/2022</td>
-                            <td>Jahresabschluss</td>
-                            <td><a href="">Download</a></td>
-                        </tr>
-                        <tr>
-                            <td>2021/2022</td>
-                            <td>Jahresabschluss</td>
-                            <td><a href="">Download</a></td>
-                        </tr>
-                        <tr>
-                            <td>2021/2022</td>
-                            <td>Jahresabschluss</td>
-                            <td><a href="">Download</a></td>
-                        </tr>
-                        <tr>
-                            <td>2021/2022</td>
-                            <td>Jahresabschluss</td>
-                            <td><a href="">Download</a></td>
-                        </tr>
-                        <tr>
-                            <td>2021/2022</td>
-                            <td>Jahresabschluss</td>
-                            <td><a href="">Download</a></td>
-                        </tr>
-                        <tr>
-                            <td>2021/2022</td>
-                            <td>Jahresabschluss</td>
-                            <td><a href="">Download</a></td>
-                        </tr>
-                        <tr>
-                            <td>2021/2022</td>
-                            <td>Jahresabschluss</td>
-                            <td><a href="">Download</a></td>
-                        </tr>
-                        <tr>
-                            <td>2021/2022</td>
-                            <td>Jahresabschluss</td>
-                            <td><a href="">Download</a></td>
-                        </tr>
-                        <tr>
-                            <td>2021/2022</td>
-                            <td>Jahresabschluss</td>
-                            <td><a href="">Download</a></td>
-                        </tr>
-                        <tr>
-                            <td>2021/2022</td>
-                            <td>Jahresabschluss</td>
-                            <td><a href="">Download</a></td>
-                        </tr>
-                        <tr>
-                            <td>2021/2022</td>
-                            <td>Jahresabschluss</td>
-                            <td><a href="">Download</a></td>
-                        </tr>
-                        <tr>
-                            <td>2021/2022</td>
-                            <td>Jahresabschluss</td>
-                            <td><a href="">Download</a></td>
-                        </tr>
-                        <tr>
-                            <td>2021/2022</td>
-                            <td>Jahresabschluss</td>
-                            <td><a href="">Download</a></td>
-                        </tr>
-                        <tr>
-                            <td>2021/2022</td>
-                            <td>Jahresabschluss</td>
-                            <td><a href="">Download</a></td>
-                        </tr>
-                        <tr>
-                            <td>2021/2022</td>
-                            <td>Jahresabschluss</td>
-                            <td><a href="">Download</a></td>
-                        </tr>
-                        <tr>
-                            <td>2021/2022</td>
-                            <td>Jahresabschluss</td>
-                            <td><a href="">Download</a></td>
-                        </tr>
-                        <tr>
-                            <td>2021/2022</td>
-                            <td>Jahresabschluss</td>
-                            <td><a href="">Download</a></td>
-                        </tr>
-
                     </tbody>
                 </table>
             </div>
