--- a/src/app/_popupKomponente/position-artikel/position-artikel.component.html
+++ b/src/app/_popupKomponente/position-artikel/position-artikel.component.html
@@ -24,161 +24,13 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr>
-                        <td><a href="">AR 63-001</a></td>
-                        <td><a href="">Landingpage</a></td>
-                        <td><a href="">Webentwicklung</a></td>
-                        <td><a href="">Pauschal</a></td>
-                        <td><a href="">CHF 150.00.-</a></td>
+                    <tr *ngFor="let artikel of artikel">
+                        <td><a href="">{{artikel.nummer}}</a></td>
+                        <td><a href="">{{artikel.bezeichnung}}</a></td>
+                        <td><a href="">{{artikel.gruppe}}</a></td>
+                        <td><a href="">{{artikel.einheit}}</a></td>
+                        <td><a href="">CHF {{artikel.vp}}.-</a></td>
                     </tr>
-                    <tr>
-                        <td><a href="">AR 63-001</a></td>
-                        <td><a href="">Landingpage</a></td>
-                        <td><a href="">Webentwicklung</a></td>
-                        <td><a href="">Pauschal</a></td>
-                        <td><a href="">CHF 150.00.-</a></td>
-                    </tr>
-                    <tr>
-                        <td><a href="">AR 63-001</a></td>
-                        <td><a href="">Landingpage</a></td>
-                        <td><a href="">Webentwicklung</a></td>
-                        <td><a href="">Pauschal</a></td>
-                        <td><a href="">CHF 150.00.-</a></td>
-                    </tr>
-                    <tr>
-                        <td><a href="">AR 63-001</a></td>
-                        <td><a href="">Landingpage</a></td>
-                        <td><a href="">Webentwicklung</a></td>
-                        <td><a href="">Pauschal</a></td>
-                        <td><a href="">CHF 150.00.-</a></td>
-                    </tr>
-                    <tr>
-                        <td><a href="">AR 63-001</a></td>
-                        <td><a href="">Landingpage</a></td>
-                        <td><a href="">Webentwicklung</a></td>
-                        <td><a href="">Pauschal</a></td>
-                        <td><a href="">CHF 150.00.-</a></td>
-                    </tr>
-                    <tr>
-                        <td><a href="">AR 63-001</a></td>
-                        <td><a href="">Landingpage</a></td>
-                        <td><a href="">Webentwicklung</a></td>
-                        <td><a href="">Pauschal</a></td>
-                        <td><a href="">CHF 150.00.-</a></td>
-                    </tr>
-                    <tr>
-                        <td><a href="">AR 63-001</a></td>
-                        <td><a href="">Landingpage</a></td>
-                        <td><a href="">Webentwicklung</a></td>
-                        <td><a href="">Pauschal</a></td>
-                        <td><a href="">CHF 150.00.-</a></td>
-                    </tr>
-                    <tr>
-                        <td><a href="">AR 63-001</a></td>
-                        <td><a href="">Landingpage</a></td>
-                        <td><a href="">Webentwicklung</a></td>
-                        <td><a href="">Pauschal</a></td>
-                        <td><a href="">CHF 150.00.-</a></td>
-                    </tr>
-                    <tr>
-                        <td><a href="">AR 63-001</a></td>
-                        <td><a href="">Landingpage</a></td>
-                        <td><a href="">Webentwicklung</a></td>
-                        <td><a href="">Pauschal</a></td>
-                        <td><a href="">CHF 150.00.-</a></td>
-                    </tr>
-                    <tr>
-                        <td><a href="">AR 63-001</a></td>
-                        <td><a href="">Landingpage</a></td>
-                        <td><a href="">Webentwicklung</a></td>
-                        <td><a href="">Pauschal</a></td>
-                        <td><a href="">CHF 150.00.-</a></td>
-                    </tr>
-                    <tr>
-                        <td><a href="">AR 63-001</a></td>
-                        <td><a href="">Landingpage</a></td>
-                        <td><a href="">Webentwicklung</a></td>
-                        <td><a href="">Pauschal</a></td>
-                        <td><a href="">CHF 150.00.-</a></td>
-                    </tr>
-                    <tr>
-                        <td><a href="">AR 63-001</a></td>
-                        <td><a href="">Landingpage</a></td>
-                        <td><a href="">Webentwicklung</a></td>
-                        <td><a href="">Pauschal</a></td>
-                        <td><a href="">CHF 150.00.-</a></td>
-                    </tr>
-                    <tr>
-                        <td><a href="">AR 63-001</a></td>
-                        <td><a href="">Landingpage</a></td>
-                        <td><a href="">Webentwicklung</a></td>
-                        <td><a href="">Pauschal</a></td>
-                        <td><a href="">CHF 150.00.-</a></td>
-                    </tr>
-                    <tr>
-                        <td><a href="">AR 63-001</a></td>
-                        <td><a href="">Landingpage</a></td>
-                        <td><a href="">Webentwicklung</a></td>
-                        <td><a href="">Pauschal</a></td>
-                        <td><a href="">CHF 150.00.-</a></td>
-                    </tr>
-                    <tr>
-                        <td><a href="">AR 63-001</a></td>
-                        <td><a href="">Landingpage</a></td>
-                        <td><a href="">Webentwicklung</a></td>
-                        <td><a href="">Pauschal</a></td>
-                        <td><a href="">CHF 150.00.-</a></td>
-                    </tr>
-                    <tr>
-                        <td><a href="">AR 63-001</a></td>
-                        <td><a href="">Landingpage</a></td>
-                        <td><a href="">Webentwicklung</a></td>
-                        <td><a href="">Pauschal</a></td>
-                        <td><a href="">CHF 150.00.-</a></td>
-                    </tr>
-                    <tr>
-                        <td><a href="">AR 63-001</a></td>
-                        <td><a href="">Landingpage</a></td>
-                        <td><a href="">Webentwicklung</a></td>
-                        <td><a href="">Pauschal</a></td>
-                        <td><a href="">CHF 150.00.-</a></td>
-                    </tr>
-                    <tr>
-                        <td><a href="">AR 63-001</a></td>
-                        <td><a href="">Landingpage</a></td>
-                        <td><a href="">Webentwicklung</a></td>
-                        <td><a href="">Pauschal</a></td>
-                        <td><a href="">CHF 150.00.-</a></td>
-                    </tr>
-                    <tr>
-                        <td><a href="">AR 63-001</a></td>
-                        <td><a href="">Landingpage</a></td>
-                        <td><a href="">Webentwicklung</a></td>
-                        <td><a href="">Pauschal</a></td>
-                        <td><a href="">CHF 150.00.-</a></td>
-                    </tr>
-                    <tr>
-                        <td><a href="">AR 63-001</a></td>
-                        <td><a href="">Landingpage</a></td>
-                        <td><a href="">Webentwicklung</a></td>
-                        <td><a href="">Pauschal</a></td>
-                        <td><a href="">CHF 150.00.-</a></td>
-                    </tr>
-                    <tr>
-                        <td><a href="">AR 63-001</a></td>
-                        <td><a href="">Landingpage</a></td>
-                        <td><a href="">Webentwicklung</a></td>
-                        <td><a href="">Pauschal</a></td>
-                        <td><a href="">CHF 150.00.-</a></td>
-                    </tr>
-                    <tr>
-                        <td><a href="">AR 63-001</a></td>
-                        <td><a href="">Landingpage</a></td>
-                        <td><a href="">Webentwicklung</a></td>
-                        <td><a href="">Pauschal</a></td>
-                        <td><a href="">CHF 150.00.-</a></td>
-                    </tr>
-
                 </tbody>
             </table>
         </div>
