--- a/src/app/_hauptKomponente/a-login/a-login.component.html
+++ b/src/app/_hauptKomponente/a-login/a-login.component.html
@@ -25,7 +25,7 @@
                     </div>
                 </div>
                 <div class="submitLogin">
-                    <input type="submit" value="LOGIN">
+                    <input type="submit" value="LOGIN" [disabled]="!loginForm.valid">
                 </div>
             </form>
         </div>
