--- a/src/app/_subKomponente/b-sidebar/b-sidebar.component.html
+++ b/src/app/_subKomponente/b-sidebar/b-sidebar.component.html
@@ -40,7 +40,7 @@
             </a>
         </div>
         <div class="logoutNav menuPunkt">
-            <a (click)="logoutUser()">
+            <a (click)="logoutName()">
                 <img [src]="logout" alt="">
                 <p>Logout</p>
             </a>
