--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,2 @@
-<router-outlet></router-outlet>
+<router-outlet *ngIf="!loading"></router-outlet>
+<app-loading-spinner *ngIf="loading"></app-loading-spinner>
