--- a/src/app/_hauptKomponente/c-dashboard/c-dashboard.component.html
+++ b/src/app/_hauptKomponente/c-dashboard/c-dashboard.component.html
@@ -21,7 +21,7 @@
     </div>
     <div class="forOR window">
         <div class="windowTitle">
-            <p>{{unternehmenName}}</p>
+            <p>{{unternehmenInfos.bezeichnung}}</p>
         </div>
         <div class="windowContent">
             <div class="infos">
