--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,1 @@
-<router-outlet *ngIf="!loading"></router-outlet>
-<app-loading-spinner *ngIf="loading"></app-loading-spinner>
+<router-outlet></router-outlet>
