--- a/src/app/_hauptKomponente/b-passwort/b-passwort.component.sass
+++ b/src/app/_hauptKomponente/b-passwort/b-passwort.component.sass
@@ -83,4 +83,9 @@
     font-family: $fontRoboto
     font-size: 25px
 
+/* ### Sub Infos ### */
+.pwFehler
+    float: right
 
+.loginSubInfos  
+    margin-bottom: 50px
