--- a/src/app/_hauptKomponente/a-login/a-login.component.html
+++ b/src/app/_hauptKomponente/a-login/a-login.component.html
@@ -15,12 +15,12 @@
                     <input type="password" id="pWord" placeholder="PASSWORT" formControlName="password">
                 </div>
                 <div class="loginSubInfos">
-                    <div class="chb">
+                    <!--<div class="chb">
                         <label class="chbContainer" for="chbLogin">Angemeldet bleiben
                             <input type="checkbox" id="chbLogin" value="Angemeldet bleiben">
                             <span class="checkmark"><p>&#10005;</p></span>
                         </label>
-                    </div>
+                    </div>-->
                     <div class="pwFehler">
                         <a routerLink="/passwort">Passwort vergessen</a>
                     </div>
