--- a/src/app/_hauptKomponente/a-login/a-login.component.sass
+++ b/src/app/_hauptKomponente/a-login/a-login.component.sass
@@ -86,6 +86,7 @@
     margin-top: 2.5px
     margin-left: 2px
 
+/* ### Sub Infos ### */
 .loginSubInfos
     width: 575-48+40px
     margin-bottom: 50px
